h1 tag now in panel-heading class

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			}
 			#main-content {
 				margin-top: 20px;
-				margin-bottom: 20px;
+				padding-bottom: 20px;
 			}
 			#main-image {
 				margin-bottom: 20px;
@@ -41,7 +41,7 @@
 						<li class="dropdown">
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Papers<span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="docs/salaries.pdf">The Effect of High Salaries on the Productivity of Major Legue Baseball Players</a></li>
+								<li><a href="docs/mlb-salaries.pdf">The Effect of High Salaries on MLB Players</a></li>
 							</ul>
 						</li>
 						<li class="dropdown">
@@ -55,28 +55,32 @@
 			</div>
 		</nav>
 		<div class="container">
-			<div id="main-content" class="col-md-10 col-md-offset-1 panel panel-default panel-body">
-				<h1 class="text-center">Sean Cooke, MS</h1>
-				<hr/>
-				<div id="main-image" class="col-md-5 col-md-offset-1"> 
-					<img src="images/cooke-sean.jpg" class="img-responsive center-block img-rounded" alt="Sean Cooke" height="400" width="300"/>
+			<div id="main-content" class="col-md-10 col-md-offset-1 panel panel-default">
+				<div id="panel-heading">
+					<h1 class="text-center">Sean Cooke, MS</h1>
 				</div>
-				<div class="col-md-5">
-					<p>
-						Experienced data science professional with years of success as a full-stack software engineer. Highly qualified with Python, R, Java, C, PHP, SQL, HTML, JavaScript, jQuery, CSS, and Bash. Skilled in Data Visualization, Machine Learning, Version Control, MapReduce, Spark, Hadoop, XML, and NoSQL.
-					</p>
-					<p>
-						Knowledgeable with design and efficient implementation of algorithms and data structures. Well-versed with full software development life cycle for heavily used, production applications. Swiss-army knife programmer who thrives working with latest technologies. Passion for creating practical, scalable, data-driven solutions to complex, real-world issues.
-					</p>
-					<a class="btn btn-block btn-social btn-default" href="mailto:SeanCooke8892@gmail.com">
-						<span class="glyphicon glyphicon-envelope"></span> Email
-					</a>
-					<a class="btn btn-block btn-social btn-linkedin" href="https://www.linkedin.com/in/seancooke35/">
-						<span class="fa fa-linkedin"></span> LinkedIn
-					</a>
-					<a class="btn btn-block btn-social btn-github" href="https://github.com/SeanCooke/">
-						<span class="fa fa-github"></span> GitHub
-					</a>
+				<hr/>
+				<div id="panel-body">
+					<div id="main-image" class="col-md-5 col-md-offset-1"> 
+						<img src="images/cooke-sean.jpg" class="img-responsive center-block img-rounded" alt="Sean Cooke" height="400" width="300"/>
+					</div>
+					<div class="col-md-5">
+						<p>
+							Experienced data science professional with years of success as a full-stack software engineer. Highly qualified with Python, R, Java, C, PHP, SQL, HTML, JavaScript, jQuery, CSS, and Bash. Skilled in Data Visualization, Machine Learning, Version Control, MapReduce, Spark, Hadoop, XML, and NoSQL.
+						</p>
+						<p>
+							Knowledgeable with design and efficient implementation of algorithms and data structures. Well-versed with full software development life cycle for heavily used, production applications. Swiss-army knife programmer who thrives working with latest technologies. Passion for creating practical, scalable, data-driven solutions to complex, real-world issues.
+						</p>
+						<a class="btn btn-block btn-social btn-default" href="mailto:SeanCooke8892@gmail.com">
+							<span class="glyphicon glyphicon-envelope"></span> Email
+						</a>
+						<a class="btn btn-block btn-social btn-linkedin" href="https://www.linkedin.com/in/seancooke35/">
+							<span class="fa fa-linkedin"></span> LinkedIn
+						</a>
+						<a class="btn btn-block btn-social btn-github" href="https://github.com/SeanCooke/">
+							<span class="fa fa-github"></span> GitHub
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
