Changed 'Knowledgeable' to 'Talented'

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							Experienced data science professional with years of success as a full-stack software engineer. Highly qualified with Python, R, Java, C, PHP, SQL, HTML, JavaScript, jQuery, CSS, and Bash. Skilled in Data Visualization, Machine Learning, Version Control, MapReduce, Spark, Hadoop, XML, and NoSQL.
 						</p>
 						<p>
-							Knowledgeable with design and efficient implementation of algorithms and data structures. Well-versed with full software development life cycle for heavily used, production applications. Swiss-army knife programmer who thrives working with latest technologies. Passion for creating practical, scalable, data-driven solutions to complex, real-world issues.
+							Talented with design and efficient implementation of algorithms and data structures. Well-versed with full software development life cycle for heavily used, production applications. Swiss-army knife programmer who thrives working with latest technologies. Passion for creating practical, scalable, data-driven solutions to complex, real-world issues.
 						</p>
 						<a class="btn btn-block btn-social btn-default" href="mailto:SeanCooke8892@gmail.com">
 							<span class="glyphicon glyphicon-envelope"></span> Email
