Changed 'data science professional' to 'data scientist'

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					</div>
 					<div class="col-md-5">
 						<p>
-							Experienced data science professional with years of success as a full-stack software engineer. Highly qualified with Python, R, Java, C, PHP, SQL, HTML, JavaScript, jQuery, CSS, and Bash. Skilled in Data Visualization, Machine Learning, Version Control, MapReduce, Spark, Hadoop, XML, and NoSQL.
+							Experienced data scientist with years of success as a full-stack software engineer. Highly qualified with Python, R, Java, C, PHP, SQL, HTML, JavaScript, jQuery, CSS, and Bash. Skilled in Data Visualization, Machine Learning, Version Control, MapReduce, Spark, Hadoop, XML, and NoSQL.
 						</p>
 						<p>
 							Talented with design and efficient implementation of algorithms and data structures. Well-versed with full software development life cycle for heavily used, production applications. Swiss-army knife programmer who thrives working with latest technologies. Passion for creating practical, scalable, data-driven solutions to complex, real-world issues.
