Changed alt tag on <img/> to match <title/>

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<hr/>
 				<div id="panel-body">
 					<div id="main-image" class="col-md-5 col-md-offset-1"> 
-						<img src="images/cooke-sean.jpg" class="img-responsive center-block img-rounded" alt="Sean Cooke" height="400" width="300"/>
+						<img src="images/cooke-sean.jpg" class="img-responsive center-block img-rounded" alt="Sean Cooke, MS" height="400" width="300"/>
 					</div>
 					<div class="col-md-5">
 						<p>
