--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="https://github.com/SeanCooke/tweetcloud">tweetcloud</a></li>
+								<li><a href="docs/klout-score.pdf">Reverse Engineering Klout Score</a></li>
 							</ul>
 						</li>
 					</ul>
