--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Papers<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="docs/mlb-salaries.pdf">The Effect of High Salaries on MLB Players</a></li>
+								<li><a href="docs/nfl-extra-points.pdf">Decrease in Mean Value of NFL Extra Points</a></li>
 							</ul>
 						</li>
 						<li class="dropdown">
