Renamed 'multithreaded-linear-equation-solver.pdf' to 'multithreading.pdf'

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<ul class="dropdown-menu">
 								<li><a href="docs/mlb-salaries.pdf">The Effect of High Salaries on MLB Players</a></li>
 								<li><a href="docs/nfl-extra-points.pdf">Decrease in Mean Value of NFL Extra Points</a></li>
-								<li><a href="docs/multithreaded-linear-equation-solver.pdf">Multithreaded Linear Equation Solver</a></li>
+								<li><a href="docs/multithreading.pdf">Multithreaded Linear Equation Solver</a></li>
 							</ul>
 						</li>
 						<li class="dropdown">
