Removed ', MS' from title, h1, and img alt tags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sean Cooke, MS | sean-cooke.com</title>
+		<title>Sean Cooke | sean-cooke.com</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -60,12 +60,12 @@
 		<div class="container">
 			<div id="main-content" class="col-md-10 col-md-offset-1 panel panel-default">
 				<div id="panel-heading">
-					<h1 class="text-center">Sean Cooke, MS</h1>
+					<h1 class="text-center">Sean Cooke</h1>
 				</div>
 				<hr/>
 				<div id="panel-body">
 					<div id="main-image" class="col-md-5 col-md-offset-1"> 
-						<img src="images/cooke-sean.jpg" class="img-responsive center-block img-rounded" alt="Sean Cooke, MS" height="400" width="300"/>
+						<img src="images/cooke-sean.jpg" class="img-responsive center-block img-rounded" alt="Sean Cooke" height="400" width="300"/>
 					</div>
 					<div class="col-md-5">
 						<p>
