--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Sean Cooke | sean-cooke.com</title>
 		<meta charset="utf-8">
@@ -50,6 +50,7 @@
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="https://github.com/SeanCooke/tweetcloud">tweetcloud</a></li>
+								<li><a href="https://github.com/SeanCooke/ny-baseball-popularity">NY Baseball Team Popularity</a></li>
 								<li><a href="docs/klout-score.pdf">Reverse Engineering Klout Score</a></li>
 							</ul>
 						</li>
