Added link to Circulation article under Papers tab

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 						<li class="dropdown">
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Papers<span class="caret"></span></a>
 							<ul class="dropdown-menu">
+								<li><a href="https://www.ahajournals.org/doi/abs/10.1161/CIRCULATIONAHA.119.045562">The Effect of Smartwatch ECGs on AFib Claims</a></li>
 								<li><a href="docs/mlb-salaries.pdf">The Effect of High Salaries on MLB Players</a></li>
 								<li><a href="docs/nfl-extra-points.pdf">Decrease in Mean Value of NFL Extra Points</a></li>
 								<li><a href="docs/multithreading.pdf">Multithreaded Linear Equation Solver</a></li>
