Removed grey background and updated skills description

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 		<link rel="stylesheet" href="css/bootstrap-social.min.css">
 		<style>
 			body {
-				background-image: url("images/background.jpg");
 				margin-top: 50px;
 			}
 			#main-content {
@@ -60,18 +59,18 @@
 			</div>
 		</nav>
 		<div class="container">
-			<div id="main-content" class="col-md-10 col-md-offset-1 panel panel-default">
+			<div id="main-content" class="col-md-10 col-md-offset-1">
 				<div id="panel-heading">
 					<h1 class="text-center">Sean Cooke</h1>
 				</div>
-				<hr/>
+				<hr>
 				<div id="panel-body">
 					<div id="main-image" class="col-md-5 col-md-offset-1"> 
 						<img src="images/cooke-sean.jpg" class="img-responsive center-block img-rounded" alt="Sean Cooke" height="400" width="300"/>
 					</div>
 					<div class="col-md-5">
 						<p>
-							Experienced machine learning engineer with years of success as a full-stack software engineer. Highly qualified with Python, R, Java, C, PHP, SQL, HTML, JavaScript, jQuery, CSS, and Bash. Skilled in Data Visualization, Machine Learning, Version Control, MapReduce, Spark, Hadoop, XML, and NoSQL.
+							Machine learning engineer with 5+ years of experience as a full-stack software engineer.  Transforms business questions into actions using data.  Highly qualified with Python, Pandas, scikit-learn, pytest, Java, Linux, and SQL.  Skilled in Machine Learning, Data Pipelines, Data Visualization, Big Data, and Cloud Computing.
 						</p>
 						<p>
 							Talented with design and efficient implementation of algorithms and data structures. Well-versed with full software development life cycle for heavily used, production applications. Swiss-army knife programmer who thrives working with latest technologies. Passion for creating practical, scalable, data-driven solutions to complex, real-world issues.
