--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 					</div>
 					<div class="col-md-5">
 						<p>
-							Machine learning engineer with 5+ years of experience as a full-stack software engineer.  Transforms business questions into actions using data.  Highly qualified with Python, Pandas, scikit-learn, pytest, Java, Linux, and SQL.  Skilled in Machine Learning, Data Pipelines, Data Visualization, Big Data, and Cloud Computing.
+							Machine Learning Engineer with 10 years of experience. Answers business questions by making predictions using data. Highly qualified with Python, Pandas, scikit-learn, pytest, Java, Linux, and SQL. Skilled in Machine Learning, Data Pipelines, Data Visualization, Algorithm Design, and Cloud Computing.
 						</p>
 						<p>
-							Talented with design and efficient implementation of algorithms and data structures. Well-versed with full software development life cycle for heavily used, production applications. Swiss-army knife programmer who thrives working with latest technologies. Passion for creating practical, scalable, data-driven solutions to complex, real-world issues.
+							Talented with design and efficient implementation of algorithms and data structures. Well-versed with full software development life cycle for heavily used, production applications. Swiss-army knife programmer who thrives working with latest technologies. Passion for creating practical, scalable, data-driven solutions to high value, real-world issues.
 						</p>
 						<a class="btn btn-block btn-social btn-default" href="mailto:SeanCooke8892@gmail.com">
 							<span class="glyphicon glyphicon-envelope"></span> Email
